--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Làm bạn em nhaa?</title>
+    <title> Do you like me😆🫢?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1> Làm bạn em nhaa?</h1>
+        <h1> Do you like me😆🫢?</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Cóo🩷</button>
             <button class="no-button" onclick="handleNoClick()">Không🥹</button>
