--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Do you like me😆🫢?</title>
+    <title> Toi yêu bạn, bạn yêu toi honggg??😆🫢?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1> Do you like me😆🫢?</h1>
+        <h1> Toi yêu bạn, bạn yêu toi honggg??😆🫢</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Cóo🩷</button>
-            <button class="no-button" onclick="handleNoClick()">Không🥹</button>
+            <button class="no-button" onclick="handleNoClick()">Kó🥹</button>
         </div>
         <div class="gif_container">
             <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
